2005-08-25 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    Move more tests out of classes.
    * Source/QueryParser/QueryHandler.m:
    Use LCWildcardQuery to handle all wildcard symbol
    according to the "Query Parser Syntax"
    (http://lucene.apache.org/java/docs/queryparsersyntax.html).

2005-08-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCWildcardQuery.m:
    * Source/Search/LCWildcardTermEnum.m:
    * Headers/Search/LCWildcardQuery.h:
    * Headers/Search/LCWildcardTermEnum.h:
    Add LCWildcardQuery.
    * Source/QueryParser/QueryHandler.m:
    Support LCWildcardQuery.
    * Source/Java/LCStringReader.m:
    * Source/Util/LCBitVector.m:
    Move tests out of classes.

2005-08-23 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCBooleanScorer.m:
    Fix bug due to typo.

2005-08-13 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Disable coordination for prefix query.

2005-08-10 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/QueryParser:
    Initial import of LCQueryParser.

2005-07-29 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Headers/LCIndexManager.h:
    * Headers/Importer/LCImporter.h:
    * Source/LCIndexManager.h:
    * Source/Importer/LCTextImporter.h:
    Improve interface a little.


2005-07-29 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/Search/LCFuzzyTermEnum.m:
    A possible fix for memory leak.

2005-07-26 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Source/QueryParser/LCQueryParser.m:
    A very simple implementation.
    * Source/QueryParser/LCIndexModifier.m:
    New class.
    * Source//LCIndexManager.m:
    Implement most of the methods.

2005-07-24 Yen-Ju Chen <yjchenx at gmail _dot_ com>

    * Headers/LCIndexManager.h:
    * Headers/Importer/LCImporter.h:
    * Headers/QueryParser/LCQueryParser.h:
    * Headers/QueryParser/QueryParser.h:
    * Source/QueryParser/LCQueryParser.m:
    * Source/QueryParser/GNUmakefile:
    Add new classes.
